# santander-transaction-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: gyw_review_report.md  分工.md  客户交易倾向预测项目_PPT对照改进建议.docx  方案.rtf  方案_v2.md  期末项目_三个Kaggle项目.pptx
notebooks/: 01_eda.ipynb  02_baseline_models.ipynb  03_lightgbm_model.ipynb  04_clustering_analysis.ipynb  05_outlier_analysis.ipynb  06_frequent_patterns.ipynb
outputs/: cluster_id_train.npy  cluster_id_valid.npy  gmm_cluster_id_train.npy  gmm_cluster_id_valid.npy
outputs/tables/: 01_feature_stats.csv  02_baseline_metrics.csv  02_cv_roc_auc.csv  03_ablation_results.csv  03_lightgbm_metrics.csv  03_threshold_sweep.csv  04_cluster_positive_rate.csv  04_kmeans_vs_gmm.csv  06_association_rules.csv  06_frequent_itemsets.csv  woe_iv_top20.csv
src/: __init__.py  data_utils.py  evaluation.py  features.py  models.py
